# snakemake-software-deployment-plugin-container

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
src/snakemake_software_deployment_plugin_container/: __init__.py
tests/: test_plugin.py
