[project]
name = "snakemake-software-deployment-plugin-container"
version = "0.3.0"
authors = [
    { name = "Ben Carrillo", email = "ben.uzh@pm.me" },
    { name = "Johannes Köster", email = "johannes.koester@uni-due.de" }
]
description = ""
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "snakemake-interface-common (>=1.17.4,<2.0.0)",
    "snakemake-interface-software-deployment-plugins (>=0.9.1,<1.0)",
    "udocker (>=1.3.17,<2.0.0)",
]

[project.urls]
repository = "https://github.com/snakemake/snakemake-software-deployment-plugin-container"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/software-deployment/container.html"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.pypi-dependencies]
snakemake-software-deployment-plugin-container = { path = ".", editable = true }

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.environments]
dev = { features = ["dev"] }
publish = { features = ["publish"] }

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3.5,<9"
ruff = ">=0.10.0,<0.15"
pytest-cov = ">=6.0.0,<7"
pyrefly = ">=0.52.0,<0.53"

[tool.pixi.feature.dev.tasks]
format = "ruff format"
lint = "ruff check"
typecheck = "pyrefly check"
qc = { depends-on = ["format", "lint"] }
coverage-report = "coverage report -m"

[tool.pixi.feature.dev.tasks.test]
cmd = [
    "pytest",
    "--cov=snakemake_software_deployment_plugin_container",
    "--cov-report=xml:coverage-report/coverage.xml",
    "--cov-report=term-missing",
    "tests/test_plugin.py",
]

[tool.coverage.report]
exclude_lines = ["pass", "\\.\\.\\."]
fail_under = 91.0

[tool.pixi.feature.publish.dependencies]
twine = ">=6.1.0,<7"
python-build = ">=1.2.2,<2"


[tool.pixi.feature.publish.tasks]
build = { cmd = "python -m build", description = "Build the package into the dist/ directory" }
check-build = { cmd = "python -m twine check dist/*", depends-on = [
    "build",
], description = "Check that the package can be uploaded" }
